# grass-addons

./: .gitignore  .gunittest.cfg  .markdownlint.yml  .pre-commit-config.yaml  CONTRIBUTING.md  pyproject.toml
.github/workflows/: additional_checks.yml  black.yml  ci.yml  extra_requirements.txt  flake8.yml  install_r_packages.R  linting.yml  post-pr-reviews.yml  super-linter.yml  test.sh
grass7/imagery/i.image.bathymetry/: i.image.bathymetry.py
src/db/db.join/: db.join.md  db.join.py
src/display/d.explanation.plot/: d.explanation.plot.md
src/display/d.frame/: d.frame.md  d.frame.py
src/display/d.mon2/: d.mon2.md
src/display/d.region.grid/: d.region.grid.md
src/display/d.vect.thematic2/: d.vect.thematic2.md  d.vect.thematic2.py
src/general/g.citation/: g.citation.md  g.citation.py
src/general/g.compare.md5/: g.compare.md5.md  g.compare.md5.py
src/general/g.copyall/: g.copyall.md  g.copyall.py
src/general/g.download.location/: g.download.location.md  g.download.location.py
src/general/g.isis3mt/: g.isis3mt.md  g.isis3mt.py
src/general/g.proj.all/: g.proj.all.md
src/general/g.proj.identify/: g.proj.identify.md  g.proj.identify.py
src/general/g.projpicker/: g.projpicker.md  g.projpicker.py
src/general/g.rename.many/: g.rename.many.md
src/imagery/i.ann.maskrcnn/: i.ann.maskrcnn.html  i.ann.maskrcnn.md
utils/: check_examples_screenshots_tests.py  create_manuals_sitemap.py  std_dataset_display.py
utils/cronjobs_osgeo_lxd/: README.md  build-xml.py  compile_addons_git.sh  cron_grass_current_stable_build_binaries.sh  hugo_clean_and_update_job.sh
(+952 files in other folders)
